--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Noble (Node.js Bluetooth LE) with Windows 10 UWP bindings",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"install" : "install.cmd"
 	},
 	"os": [
 		"win32"
