Update Windows SDK version to 15033

--- a/uwp/windows.devices.bluetooth/package.json
+++ b/uwp/windows.devices.bluetooth/package.json
@@ -16,6 +16,7 @@
     "Bluetooth",
     "BluetoothAdapter",
     "BluetoothDeviceId",
+    "BluetoothUuidHelper",
     "BluetoothDevice",
     "BluetoothClassOfDevice",
     "BluetoothLEAppearanceCategories",
