--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "noble-uwp",
-	"version": "0.4.1",
+	"version": "0.4.2",
 	"description": "Noble (Node.js Bluetooth LE) with Windows 10 UWP bindings",
 	"main": "index.js",
 	"scripts": {
-		"install" : "build.cmd"
+		"install": "install.cmd"
 	},
 	"os": [
 		"win32"
@@ -29,5 +29,8 @@
 	"dependencies": {
 		"debug": "^2.6.0",
 		"noble": "^1.7.0"
-	}
+	},
+	"bundledDependencies": [
+		"node-pre-gyp"
+	]
 }
