Move uwp bindings to abi-specific path

--- a/uwp/windows.devices.bluetooth.advertisement/package.json
+++ b/uwp/windows.devices.bluetooth.advertisement/package.json
@@ -53,7 +53,7 @@
   ],
   "binary": {
     "module_name": "binding",
-    "module_path": "./lib/binding/",
+    "module_path": "./binding/{node_abi}-{platform}-{arch}/",
     "host": "https://github.com/jasongin/noble-uwp/releases/download/",
     "remote_path": "windows_devices_bluetooth_advertisement_{version}"
   }
