--- a/uwp/windows.storage.streams/package.json
+++ b/uwp/windows.storage.streams/package.json
@@ -65,7 +65,7 @@
   ],
   "binary": {
     "module_name": "binding",
-    "module_path": "./lib/binding/",
+    "module_path": "./binding/{node_abi}-{platform}-{arch}/",
     "host": "https://github.com/jasongin/noble-uwp/releases/download/",
     "remote_path": "windows_storage_streams_{version}"
   }
