--- a/uwp/windows.foundation/package.json
+++ b/uwp/windows.foundation/package.json
@@ -55,7 +55,7 @@
   ],
   "binary": {
     "module_name": "binding",
-    "module_path": "./lib/binding/",
+    "module_path": "./binding/{node_abi}-{platform}-{arch}/",
     "host": "https://github.com/jasongin/noble-uwp/releases/download/",
     "remote_path": "windows_foundation_{version}"
   }
