Add Node 10.x to appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,7 @@ environment:
     - node_version: '6'
     - node_version: '8'
     - node_version: '9'
+    - node_version: '10'
 
 install:
   # install the right node version
